--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,8 @@ android {
         compile group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
         // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
+// https://mvnrepository.com/artifact/com.google.code.gson/gson
+        compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 
 
     }
