--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.dwp46.cants"
         minSdkVersion 15
-        targetSdkVersion 27
+        targetSdkVersion 28
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -19,20 +20,17 @@ android {
     }
     dependencies {
         compile group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
-        // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
-// https://mvnrepository.com/artifact/com.google.code.gson/gson
-
-        compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
-
-
-// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
+        compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
         compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
-
-
+        compile group: 'com.google.api-client', name: 'google-api-client', version: '1.23.0'
+        compile group: 'com.google.api-client', name: 'google-api-client-android', version: '1.22.0'
+        compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+        compile 'com.google.apis:google-api-services-calendar:v3-rev305-1.23.0'
+        compile 'commons-io:commons-io:2.4'
+        compile 'com.google.api-client:google-api-client:1.23.0'
     }
     packagingOptions {
-
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.txt'
@@ -49,10 +47,10 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
 }
