--- a/web/package.json
+++ b/web/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.6.5",
+    "pdf2json": "^1.2.0",
     "vue": "^2.6.11",
+    "vue-pdf": "^4.1.0",
+    "vue-pdfjs": "^1.1.1",
     "vue-router": "^3.3.4"
   },
   "devDependencies": {
